--- a/Fundamentals/odin's-recipes/index.html
+++ b/Fundamentals/odin's-recipes/index.html
@@ -10,8 +10,8 @@
 
         <p><strong>Recipes:</strong></p>
         <ul>
-            <li><a href="./recipes/flatbread.html" rel="noreferrer noopener">Flat Bread</a></li>
-            <li><a href="" rel="noreferrer noopener"></a></li>
+            <li><a href="./recipes/flatbread.html" rel="noreferrer noopener">Flatbread</a></li>
+            <li><a href="./recipes/heart-stew.html" rel="noreferrer noopener">Hearty Stew</a></li>
             <li><a href="" rel="noreferrer noopener"></a></li>
             <li><a href="" rel="noreferrer noopener"></a></li>
         </ul>
