--- a/Fundamentals/odin's-recipes/recipes/heart-stew.html
+++ b/Fundamentals/odin's-recipes/recipes/heart-stew.html
@@ -2,25 +2,34 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Flatbread</title>
+        <title>Hearty stew</title>
     </head>
     <body>
-        <h1>Flatbread</h1>
-        <p>The most simple bread made with only a few ingredients that can go along with most dishes or eaten just by itself.</p>
+        <h1>Hearty Stew</h1>
+        <p>A staple in the Viking diet, this rich and flavourful stew is made with slow-cooked meats, root vegetables, and a mix of spices. This recipe is perfect for a cold winter night or a filling meal after a long day of raiding.</p>
         <img src="https://www.allrecipes.com/thmb/ARQQVU3ia98nvwLPn4N7rADQTSQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/RM-281995-ClassicHeartyBeefStew-ddmfs-3x4-6957-660344f4e4c8417fa6d1cf3175e0202c.jpg" alt="Hearty Stew">
         <p>Ingredients:</p>
         <ul>
-            <li>250g Flour</li>
-            <li>250ml Water</li>
+            <li>500g Beef, cubed</li>
+            <li>2 Onions, chopped</li>
+            <li>3 Carrots, chopped</li>
+            <li>2 Parsnips, chopped</li>
+            <li>2 Turnips, chopped</li>
+            <li>1l Beef broth</li>
+            <li>1 tbsp Butter</li>
             <li>1 tsp Salt</li>
+            <li>1 tsp Ground black pepper</li>
+            <li>1 tsp Dried thyme</li>
+            <li>1 tsp Dried sage</li>
+            <li>1 tsp Dried rosemary</li>
         </ul>
         <p>Instructions:</p>
         <ol>
-            <li>Mix the flour and the salt in a larg bowl.</li>
-            <li>Gradually add the water, stirring until a soft dough forms.</li>
-            <li>Knead the dough until the dough is smooth.</li>
-            <li>Seperate the dough into 6-8 pieces and roll each peace into a thin, round flatbread.</li>
-            <li>Heat dry frying pan over medium heat and cook each flatbread for 2-3 minutes on each side.</li>
+            <li>In a large pot, melt the butter over medium heat. Add the onions and cook until softened.</li>
+            <li>Add the meat to cook until browned on all sides.</li>
+            <li>Stir in the carrots parsnips, turnips, salt, pepper, thyme, sage, and rosemary.</li>
+            <li>Pour in the beef broth, bring to a boil, then reduce the heat and let it simmer for 1-2 hours, or until the meat is tender and the vegetables are cooked through.</li>
+            <li>Serve hot with a side of flatbread or rye bread.</li>
         </ol>
         <p><strong>Enjoy!</strong></p>
     </body>
